resources/istio/destinationrule-busola-backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  trafficPolicy:
    tls:
      mode: SIMPLE
