resources/istio/http_route.tpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - name: gateway
  hostnames: ['${DOMAIN}']
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /headers
      backendRefs:
        - name: busola
          namespace: ${NAMESPACE}
          port: 3001
